[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes_and_scripts/screen__practice_game/game.gd" type="Script" id=1]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/scene_matrix_assets/animmdpi.png" type="Texture" id=2]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/option.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes_and_scripts/gl_obj__go_to_main_menu_btn/back_to_menu_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/themes/blue_theme.tres" type="Theme" id=5]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/circular_count_down/circular_count_down.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/visual_effects/game_anim_rect.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/lastest_tries_bar/lastest_tries_container.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/overall_tries_bar/ScoreBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/GameSoundEffects.gd" type="Script" id=10]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/QuestionGenerator.gd" type="Script" id=11]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/scene_matrix_assets/hud_container.png" type="Texture" id=12]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/scene_matrix_assets/translucent_external_container.png" type="Texture" id=13]
[ext_resource path="res://assets/themes/newthemed.tres" type="Theme" id=14]
[ext_resource path="res://assets/themes/circular_progress_bar_number.tres" type="DynamicFont" id=15]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/scene_matrix_assets/question_container.png" type="Texture" id=16]
[ext_resource path="res://scenes_and_scripts/screen__practice_game/scene_matrix_assets/bottom_menu_container.png" type="Texture" id=17]
[ext_resource path="res://scenes_and_scripts/gl_obj__go_to_settings_btn/go_to_settings_btn.tscn" type="PackedScene" id=18]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TranslucentContainer" type="TextureRect" parent="."]
margin_left = 40.0
margin_top = 24.0
margin_right = 1044.0
margin_bottom = 1870.0
texture = ExtResource( 13 )

[node name="GameAnimRect" parent="." instance=ExtResource( 7 )]
margin_right = 1080.0
margin_bottom = 1920.0

[node name="ExternalVBoxContainer" type="Control" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
theme = ExtResource( 5 )

[node name="HUDContainer" type="Control" parent="ExternalVBoxContainer"]
margin_top = 639.0
margin_right = 1080.0
margin_bottom = 711.0
size_flags_vertical = 0

[node name="BackgroundRect" type="TextureRect" parent="ExternalVBoxContainer/HUDContainer"]
margin_left = -192.0
margin_top = -607.0
margin_right = 1213.0
margin_bottom = -189.0
texture = ExtResource( 12 )

[node name="QuestionTimer" parent="ExternalVBoxContainer/HUDContainer" instance=ExtResource( 6 )]
margin_left = 96.0
margin_top = -559.0
margin_right = 143.0
margin_bottom = -487.0

[node name="Last20TriesContainer" parent="ExternalVBoxContainer/HUDContainer" instance=ExtResource( 8 )]
margin_left = 344.0
margin_top = -525.0
margin_right = 524.0
margin_bottom = -490.0
size = 12

[node name="Sprite" type="Sprite" parent="ExternalVBoxContainer/HUDContainer"]
position = Vector2( 640, -431 )
texture = ExtResource( 2 )

[node name="ScoreBar" parent="ExternalVBoxContainer/HUDContainer" instance=ExtResource( 9 )]
margin_left = 782.0
margin_top = -411.0
margin_right = 999.0
margin_bottom = -339.0

[node name="QuestionContainer" type="Control" parent="ExternalVBoxContainer"]
margin_left = 32.0
margin_top = 544.0
margin_right = 1112.0
margin_bottom = 613.0

[node name="ColorRect" type="TextureRect" parent="ExternalVBoxContainer/QuestionContainer"]
margin_left = 72.0
margin_top = -69.0
margin_right = 1016.0
margin_bottom = 121.0
texture = ExtResource( 16 )

[node name="QuestionText" type="Label" parent="ExternalVBoxContainer/QuestionContainer"]
margin_left = 176.0
margin_top = -16.0
margin_right = 619.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0, 0.74902, 0, 1 )
custom_fonts/font = ExtResource( 15 )
text = "Cuanto es?"
align = 1
valign = 1

[node name="Question" type="Label" parent="ExternalVBoxContainer/QuestionContainer"]
margin_left = 704.0
margin_top = -29.0
margin_right = 896.0
margin_bottom = 69.0
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "X * Y"
align = 1
valign = 1

[node name="OptionsContainer" type="Control" parent="ExternalVBoxContainer"]
margin_left = 192.0
margin_top = 808.0
margin_right = 452.0
margin_bottom = 1068.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBox" type="HBoxContainer" parent="ExternalVBoxContainer/OptionsContainer"]
margin_right = 692.0
margin_bottom = 690.0
custom_constants/separation = 20

[node name="VBox1" type="VBoxContainer" parent="ExternalVBoxContainer/OptionsContainer/HBox"]
margin_right = 336.0
margin_bottom = 690.0
custom_constants/separation = 20

[node name="Option1" parent="ExternalVBoxContainer/OptionsContainer/HBox/VBox1" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_right = 336.0
margin_bottom = 335.0

[node name="Option2" parent="ExternalVBoxContainer/OptionsContainer/HBox/VBox1" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 355.0
margin_right = 336.0
margin_bottom = 690.0

[node name="VBox2" type="VBoxContainer" parent="ExternalVBoxContainer/OptionsContainer/HBox"]
margin_left = 356.0
margin_right = 692.0
margin_bottom = 690.0
custom_constants/separation = 20

[node name="Option3" parent="ExternalVBoxContainer/OptionsContainer/HBox/VBox2" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_right = 336.0
margin_bottom = 335.0

[node name="Option4" parent="ExternalVBoxContainer/OptionsContainer/HBox/VBox2" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 355.0
margin_right = 336.0
margin_bottom = 690.0

[node name="BottomMenuContainer" type="TextureRect" parent="ExternalVBoxContainer"]
margin_left = 216.0
margin_top = 1672.0
margin_right = 859.0
margin_bottom = 1866.0
texture = ExtResource( 17 )

[node name="GoToMainMenuBtn" parent="ExternalVBoxContainer" instance=ExtResource( 4 )]
margin_left = 216.0
margin_top = 1672.0
margin_right = 715.0
margin_bottom = 1861.0

[node name="GoToSettingsBtn" parent="ExternalVBoxContainer" instance=ExtResource( 18 )]
margin_left = 560.0
margin_top = 1672.0
margin_right = 1111.0
margin_bottom = 1858.0

[node name="GameSoundEffects" type="AudioStreamPlayer" parent="ExternalVBoxContainer"]
pause_mode = 1
script = ExtResource( 10 )

[node name="QuestionGenerator" type="Node" parent="."]
script = ExtResource( 11 )
